# Sensory-motor-recruitment-in-human-grasping

./: .gitattributes  .gitignore  1  2  FeedBack.h  Project.uvoptx  Project.uvprojx  README.md  Timer.c  build_nature_reference_docx.py  grasp_contact_force_new_refs.ris  grasp_contact_force_refs.ris  grasp_data_gap_new_refs.ris  human_grasp_patterns_recent_refs.ris  human_grasping_recent_refs.ris  nature_reference_list.docx  nature_reference_match_report.json
EID-hand-control/: FeedBack.c
Force correlation analysis/: README.md  __init__.py  mantel_test.py  pearson_matrix_analysis.py  requirements.txt
Hand region analysis/: README.md  __init__.py  cluster_point_clouds.py  publication_utils.py  requirements.txt  tsne_embedding.py
Hardware/: Key.c  LED.c  SC.c  SCServo.h  ST.c  ST.h  Serial.c  Serial.h  myFunc.c  uart.h
Region correlation analysis/: README.md  __init__.py  association_rule_mining.py  publication_utils.py  requirements.txt  targeted_rule_summary.py
Region importance analysis/: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  README.md  pyproject.toml
Region importance analysis/data/: README.md
Region importance analysis/outputs/: README.md
Region importance analysis/src/importance_analysis/: __init__.py  analysis.py  cli.py  io.py
Region importance analysis/tests/: test_analysis.py
Selective motor recruitment analysis/: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  README.md  pyproject.toml
Selective motor recruitment analysis/data/: README.md
Selective motor recruitment analysis/outputs/: README.md
Selective motor recruitment analysis/src/dof_probability/: __init__.py  cli.py  core.py  profiles.json
Selective motor recruitment analysis/tests/: test_core.py
Selective sensor recruitment analysis/: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  README.md  pyproject.toml
Selective sensor recruitment analysis/data/: README.md
Selective sensor recruitment analysis/outputs/: README.md
Selective sensor recruitment analysis/src/sensor_validation/: __init__.py  cli.py  deep.py  io.py  models.py  preprocessing.py
Selective sensor recruitment analysis/tests/: test_workflow.py
Simulation/: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  README.md  RELEASE_SCOPE.md  environment.yml
System/: Delay.c
(+275 files in other folders)
