[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "importance-analysis"
version = "0.1.0"
description = "Reproducible tree-model feature-importance and point-cloud analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7,<4",
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "optuna>=3.5,<5",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
]

[project.optional-dependencies]
shap = ["shap>=0.44,<1"]
test = ["pytest>=7.4,<9"]

[project.scripts]
importance-analysis = "importance_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

