[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dof-allocation-probability"
version = "0.1.0"
description = "Reproducible degree-of-freedom allocation probability calculation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.0,<3",
]

[project.optional-dependencies]
test = ["pytest>=7.4,<9"]

[project.scripts]
dof-probability = "dof_probability.cli:main"

[tool.setuptools.package-data]
dof_probability = ["profiles.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

